bista_website_sale_options/static/src/less/maq_website.ui.component.less
.oe_product div.oe_product_cart:hover{
    height:100%;
    box-shadow: 0 5px 15px 2px #000000bf;
    transition: box-shadow 0.3s ease-in-out;
}

/**pin-point**/

.maq_middle {
  transition: .5s ease;
  opacity: 0;
  position: absolute;
  top: 70%;
  left: 50%;
  width: 100%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
}

.oe_product div.oe_product_cart:hover a{
    opacity: 0.9;
}

.product_grid_qty{
    opacity:0;
}

.oe_product div.oe_product_cart:hover .product_grid_qty{
    opacity:1;
}

.maq_hide_span {
    opacity:1;
}

.oe_product div.oe_product_cart:hover .maq_hide_span {
    opacity:0;
} 

.oe_product div.oe_product_cart:hover .maq_middle {
    opacity: 1;
}

/**pin-point**/

.maq_text {
  background: rgba(0, 0, 0, 0.5);
  color: white;
  font-size: 16px;
  padding: 16px 90px;



}

/**Changes-part**/

.maq_text {
 padding:12px;
}

.maq_middle {
  transition: .5s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 100%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
}
.oe_product section {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  overflow: hidden;
  padding: 0 15px 24px 15px;
  height: 160px;
  border-top: 1px solid rgba(255, 255, 255, 0.2);
  background: rgba(255, 255, 255, 0.75);
  z-index: 5;
  top:58%;
}

.oe_website_spinner .js_quantity {
    text-align: center;
    border-color: #555555;
    height: 40px;
}

.oe_website_spinner {
        margin-bottom: 10px;
    max-width: 150px;
    width: 100%;
    height: 40px;

}

h5{
    font-family: inherit;
    font-weight: 500;
    line-height: 1;
    color: inherit;
    height: 60px;
}

/* MAQ Distributors - 25 Jan */
.oe_product .oe_product_image img {

    max-width: 100%;
    max-height: 100%;
    margin: auto;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 4;

}

.oe_product .oe_product_image {

    position: absolute;
    left: 15px;
    right: 15px;
    top: 0px;
    bottom: 50%;
    text-align: center;

}


.maq_middle {

    transition: 0.5s ease;
    opacity: 0;
    position: absolute;
    top: 100%;
    left: 50%;
    width: 100%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
    z-index: 11111111;

}

.oe_product .oe_product_cart {

    position: relative;
    width: 100%;
    height: 66%;

}

.oe_website_sale .oe_product section .product_price .btn-default {

    background: #ffffff;
    border: 1px solid black;
    font-size: 14px;
    position: relative;
    /* padding-right: 0px; */
    padding:8px 12px;
    top: -6px;
    /*padding-bottom: 0px;*/
    color:#000;
    font-weight: bold;

}

.btn-default:hover {
    color: #000000;
}

.oe_product section {

    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: hidden;
    padding: 0 15px 24px 15px;
    min-height: 56px;
    border-top: 1px solid rgba(255, 255, 255, 0.2);
    background: rgba(255, 255, 255, 0.75);
    z-index: 5;
    top: 56%;

}

.oe_website_sale .oe_product section {
padding: 4px 15px;
}

h5 {

    font-family: inherit;
    font-weight: 500;
    line-height: 1.1;
    color: inherit;
    height: 66px;

}

.maq_text {
    padding: 6px;
}

.oe_website_sale .oe_product section h5 {
    padding: 0px 0;
        padding-bottom: 0px;
    font-size: 12px;
    margin-bottom: 0px;
    text-align: left;
    border-bottom: 1px solid #d9d9d9;
}

